--- a/public/index.html
+++ b/public/index.html
@@ -194,9 +194,7 @@ PaylinkButton.render('#rnw-paylink-button-new-member', {'solution-id': "nysvx", 
           <p style="padding-bottom: 50px;">L'Amicale du Wifi est un projet de l'association « Fully Coworking ». Ses fondateurs vivent le télétravail et pratiquent le coworking depuis plus de 10 ans. Avec cet espace, l'association veut contribuer à relocaliser l'activité professionnelle au centre du village, créer des liens dans la communauté locale et démocratiser le travail à distance de qualité.
           </p>
           <h2>Devenez membre de l'association</h2>
-          <p>
-            Soutenez votre espace de coworking local en devenant membre de l'association à but non lucratif « Fully Coworking » pour 1 an. Vous serez invité à deux événements exclusifs par an et serez informés de l'évolution de l'association.
-          </p>
+          <p>Soutenez votre espace de coworking local en devenant membre de l'association à but non lucratif « Fully Coworking » pour 1 an. Vous serez invité(e) aux événements de l'association et serez informé(e) de son évolution.</p>
           </br/>
           <div id="rnw-paylink-button-new-member"></div>
           </br/>
