Update membership notice

--- a/public/membre/index.html
+++ b/public/membre/index.html
@@ -96,7 +96,9 @@ PaylinkButton.render('#rnw-paylink-button', {'solution-id': "nysvx", 'solution-t
       <div class="col-lg-10 mx-auto col-md-12">
         <div class="page-header">
           <h2> Devenir membre</h2>
-          <p><p>Soutenez votre espace de coworking local en devenant membre de l'association à but non lucratif « Fully Coworking » pour 1 an. Vous serez invité à deux événements exclusifs par an et serez informés de l'évolution de l'association. </p> </br/> <div id="rnw-paylink-button"></div> </br/> <p>Nous confirmerons votre nouveau statut par email.</p>
+          <p>
+		Soutenez votre espace de coworking local en devenant membre de l'association à but non lucratif « Fully Coworking » pour 1 an.
+Vous serez invité(e) aux événements de l'association et serez informé(e) de son évolution.
 </p>
         </div>
       </div>
