--- a/public/terms/index.html
+++ b/public/terms/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="l'Amicale du Wifi | L'espace de coworking associatif au centre du village de Fully, Valais, Suisse">
 
     <!--Meta For Index-->
-    <meta name="robots" content="index, follow, Noimageindex">
+    <meta name="robots" content="noindex, nofollow, Noimageindex">
 
     <!--mobile responsive meta-->
     
